fix banner overflow

--- a/htdocs/365film/less/public.less
+++ b/htdocs/365film/less/public.less
@@ -842,6 +842,7 @@ textarea{resize: none; overflow-y:auto;}
     position: relative;
     width: 100%;
     height: 340px;
+    overflow: hidden;
     .swiper-link{
         display: block;
         height: 100%;
